--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,28 @@ header {
   }
 }
 
+.container-main {
+  margin-bottom: 150px;
+}
+
+.card-detail {
+  margin-top: 50px;
+  margin-bottom: 150px;
+  width: 50%;
+}
+
+.btn-success {
+  padding-top: 2px;
+  padding-bottom: 2px;
+  margin-left: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.card-product {
+  min-height: 200px;
+}
+
 /* footer */
 footer {
   position: fixed;
